Added more image topics

--- a/rellis_params.yaml
+++ b/rellis_params.yaml
@@ -1,13 +1,21 @@
 save_root: '/home/jpldev/Datasets/Rellis_3D_unzip/Rellis-3D/imgs/'
 subscribe_to: [
-  {pub: '/nerian/left/image_rect_color/compressed',
+  {pub: '/nerian/left/image_raw/',
   format: 'BGR',
-  type: 'CompressedImage',
+  type: 'Image',
   format_string: "%s_left.png"},
-  {pub: '/nerian/right/image_rect_color/compressed',
+  {pub: '/nerian/right/image_raw/',
   format: 'BGR',
+  type: 'Image',
+  format_string: "%s_right.png"}, 
+  {pub: '/nerian/left/image_rect_color/compressed',
+  format: 'RGB',
   type: 'CompressedImage',
-  format_string: "%s_right.png"},
+  format_string: "%s_left_rect.png"},
+  {pub: '/nerian/right/image_rect_color/compressed',
+  format: 'RGB',
+  type: 'CompressedImage',
+  format_string: "%s_right_rect.png"},
   {pub: /depth_image,
   format: 'mono16',
   type: 'Image',
